Adiciona alterações na lista de habilidades

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
     <h3 id="hab">Habilidades</h3>
 
     <ul>
-        <li><b>Comunicação</b></li>
+        <li class="comunic"><b>Comunicação</b></li>
         <br>
-        <li>Criatividade</li>
+        <li class="criat">Criatividade</li>
         <br>
-        <li>Liderança</li>
+        <li class="lid">Liderança</li>
         <br>
-        <li>Gestão de Pessoas</li>
+        <li class="gestp">Gestão de Pessoas</li>
         <br>
-        <li>Inteligência Emocional</li>
+        <li class="int">Inteligência Emocional</li>
         <br>
         <br>
         <br>
