--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="link">
         <a class="foto-link" href="#foto">Foto do Perfil</a>
         
-        <a class="blog-link" href="https://blog.betrybe.com/" target="_blank">Blog Preferido</a>
+        <a class="blog-link" href="https://blog.cubos.io/author/cubos-academy/" target="_blank">Blog Preferido</a>
 
         <a class="descr-link" href="#descr">Ver Descrição</a>
 
